kubernetes/weather-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service-weather
  labels:
    app: myapp
spec:
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
