kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /  # Adjusting for the new path structure
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /weather(/|$)(.*)  # Matches /weather and any subpaths
        pathType: Prefix
        backend:
          service:
            name: myapp-service
            port:
              number: 80
      - path: /hello-world-one(/|$)(.*)  # Matches /hello-world-one and any subpaths
        pathType: Prefix
        backend:
          service:
            name: aks-helloworld-one
            port:
              number: 80
