kubernetes/weather-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: default  # Make sure it's in the same namespace as your service
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
   # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: weather-app-eli.duckdns.org  # Subdomain for app2
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp-service-weather  # Your service name here
                port:
                  number: 80
